# BatteryMaster

./: .gitignore  Readme.md  index.html  package-lock.json  package.json  vite.config.ts
crates/battery/: Cargo.toml
crates/battery/examples/: get_status.rs
crates/battery/src/: battery_status.rs  lib.rs
crates/persis/: .gitignore  Cargo.toml  package.json
crates/persis/migration/: Cargo.toml
crates/persis/migration/src/: lib.rs  m20250311_150000_init.rs
crates/persis/src/: down_sample.rs  lib.rs  manager.rs  store.rs
crates/persis/src/entities/: battery_one_minutes.rs  battery_realtime.rs  battery_state_history.rs  memory_battery_status.rs  mod.rs  prelude.rs
crates/power/: Cargo.toml
crates/power/src/: lib.rs  power_status.rs
crates/status/: Cargo.toml
crates/status/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: battery.rs  cache.rs  dataframe.rs  lib.rs  power.rs  processor.rs  store.rs
crates/system/: Cargo.toml
crates/system/examples/: get_status.rs
crates/system/src/: lib.rs  system_status.rs
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: battery.rs  commands.rs  config.rs  lib.rs  main.rs  power.rs  session.rs  system.rs  tray.rs  windows.rs
src/components/: LineChart.vue  PercentageGauge.vue
src/pages/: CpuPower.vue  History.vue  Monitor.vue  Setting.vue
src/stores/: ApuPower.ts  BatteryInfo.ts  Config.ts  HistoryInfo.ts  SystemInfo.ts
