[package]
name = "BatteryMaster"
version = "0.1.2"
description = "BatteryMaster"
authors = ["topabomb"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
image = "0.25.5"
rusttype = "0.9.3"
tokio = { version = "1.43.0", features = ["time", "macros"] }
humantime = "2.1.0"
winapi = { version = "0.3.9", features = ["securitybaseapi", "shellapi"] }
tauri-plugin-log = "2.2"
log = "0.4.26"
chrono = "0.4.40"
status = { path = "../crates/status" }
store = { path = "../crates/store" }
battery = { path = "../crates/battery" }
power = { path = "../crates/power" }
system = { path = "../crates/system" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.2"
tauri-plugin-single-instance = "2.2"
[profile.dev]
incremental = true
codegen-units = 256
